@@ -8,7 +8,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.platform.testkit.engine.EngineTestKit;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.github.nagyesta.abortmission.testkit.LaunchEvaluationUtil.*;
@@ -17,19 +16,19 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectClass;
 
-public class FuelTankTest {
+class FuelTankTest {
 
     private static final int FIRST_LINE_OF_EXAMPLES = 14;
     private static final int LAST_LINE_OF_EXAMPLES = 18;
     private static final String RESOURCE = "classpath:com/github/nagyesta/abortmission/booster/cucumber/fueltank/FuelTank.feature";
     private static final List<String> EXPECTED_DISPLAY_NAMES = IntStream.rangeClosed(FIRST_LINE_OF_EXAMPLES, LAST_LINE_OF_EXAMPLES)
             .mapToObj(i -> "Fuel_1 Fuel tank should fill (" + RESOURCE + ":" + i + ")")
-            .collect(Collectors.toList());
+            .toList();
 
     @Test
     @Tag("integration")
     @SuppressWarnings("checkstyle:MagicNumber")
-    public void testAssumption() {
+    void testAssumption() {
         EngineTestKit
                 .engine("junit-vintage")
                 .selectors(selectClass(FuelTankTestContext.class))
